@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.1.7-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Thu Mar 14 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.6-0
 - Fix the Active Directory tests
 
